Add classes for nightwatch e2e tests

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <title>basic-express-server</title>
   </head>
   <body>
-    <h1>Your basic express server is working!</h1>
-    <p>Now get out there and build something great!</p>
+    <div class="app" id="app">
+    <h1 class="title">Your basic express server is working!</h1>
+    <p class="description">Now get out there and build something great!</p>
   </body>
 </html>
